# RecommenderSystem

./: .gitignore  README.md  RecommendationSystem.cabal
InitialVersion/src/: Main.hs
InitialVersion/src/FunkSVD/: SerialEstimator.hs
InitialVersion/src/Randomizer/: RandomUtils.hs
Optimized/src/: Main.hs
Optimized/src/Data/: Config.hs  Rating.hs
Optimized/src/FunkSVD/: SerialEstimator.hs
Optimized/src/Randomizer/: RandomUtils.hs
